syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

option csharp_namespace = "EMS.Protos";

package person_info;

service PersonInfoService {
  rpc Add(GeneralInfo) returns (google.protobuf.StringValue);
  rpc UpdateNames(NamesRequest) returns (google.protobuf.Empty);
  rpc UpdateGender(GenderRequest) returns (google.protobuf.Empty);
  rpc UpdateLogin(LoginRequest) returns (google.protobuf.Empty);
}

message NamesRequest {
  google.protobuf.StringValue id = 1;
  google.protobuf.StringValue first_name = 2;
  google.protobuf.StringValue last_name = 3;
}

message LoginRequest {
  google.protobuf.StringValue id = 1;
  google.protobuf.StringValue value = 2;
}

message GenderRequest {
  google.protobuf.StringValue id = 1;
  bool value = 2;
}

message GeneralInfo {
  string first_name = 1;
  string last_name = 2;
  google.protobuf.Timestamp born_on = 3;
  string login = 4;
  bool gender = 5;
}